# mini-antivirus-ia

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  env.example  pyproject.toml
docs/: diagram.md
src/agent/: __init__.py  cli.py
src/agent/collectors/: process_monitor.py
src/agent/utils/: config_loader.py  event_bus.py  event_store.py  file_helpers.py  logger_config.py
src/scripts/: run_agent.py
tests/: conftest.py  test_event_bus.py  test_event_store.py  test_process_monitor.py
