[project]
name = "miniantivirus-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "druiz912",email = "druiz264@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil (>=7.0.0,<8.0.0)",
    "pywin32 (>=310,<311)",
    "watchdog (>=6.0.0,<7.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "shap (>=0.48.0,<0.49.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.13"
isort = "^6.0.1"
mypy = "^1.16.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pre-commit = "^4.2.0"

